@@ -9,15 +9,23 @@ import javax.faces.application.FacesMessage;
 import javax.faces.bean.ManagedBean;
 import javax.faces.bean.SessionScoped;
 import com.alliax.portalclientes.controller.ConstructEmail;
+import com.alliax.portalclientes.controller.CrearPedidoRFC;
 import com.alliax.portalclientes.controller.PrecioMaterialRFC;
 
 import com.alliax.portalclientes.domain.*;
 import com.alliax.portalclientes.model.DetallePedidoCotizacion;
+import com.alliax.portalclientes.model.PedidoCapacidadesTransporteEspecial;
+import com.alliax.portalclientes.model.PedidoEncabezado;
+import com.alliax.portalclientes.model.PedidoEquipoEspecialProteccionPersonal;
+import com.alliax.portalclientes.model.PedidoProductoAlmacenar;
+import com.alliax.portalclientes.model.PedidoReferenciaUbicacion;
 import com.alliax.portalclientes.model.PrecioMaterial;
 import com.alliax.portalclientes.service.MaterialService;
 import org.apache.log4j.Logger;
-
-
+import com.alliax.portalclientes.controller.ConstructEmail;
+import com.alliax.portalclientes.controller.InfoClienteRFC;
+import com.alliax.portalclientes.domain.RolUsuario;
+import com.alliax.portalclientes.domain.Usuario;
 import com.alliax.portalclientes.model.CotizacionFlete;
 
 
@@ -28,6 +36,8 @@ import com.alliax.portalclientes.service.PedidoService;
 @SessionScoped
 public class ConsultaCotizacion_backing extends AbstractBackingGen {
 
+    private final String estadoCaptura= "En Captura";
+    private final String estadoFin = "Finalizado";
 
 
 
@@ -53,6 +63,7 @@ public class ConsultaCotizacion_backing extends AbstractBackingGen {
     private String moneda;
     
     private String finalizar;
+    private String email;
 
 
     private List<DetallePedidoCotizacion> partidas;
@@ -212,11 +223,14 @@ public class ConsultaCotizacion_backing extends AbstractBackingGen {
 
     public String buscarDetalles(String noPedido){
         partidas = new ArrayList();
+        PrecioMaterialRFC precioRFC = null;
         try{
 
-            PrecioMaterialRFC precioRFC = this.getSpringContext().getBean("precioMaterialRFC",PrecioMaterialRFC.class);
+            precioRFC = this.getSpringContext().getBean("precioMaterialRFC",PrecioMaterialRFC.class);
             Long idPedido = Long.valueOf(noPedido);
             Pedido pedido=  service.findById(idPedido);
+            if(pedido!= null) {
+            this.setEmail(pedido.getCorreoElectronico());
             List<PedidoPartidas> partidasPedidos = partidaService.findByidPedido(idPedido);
             BigDecimal subtotal = BigDecimal.ZERO;
             BigDecimal impuesto = BigDecimal.ZERO;
@@ -232,7 +246,15 @@ public class ConsultaCotizacion_backing extends AbstractBackingGen {
                     d.setDescripcion(mat.getDescripcion());
                     d.setUnidadMedida(mat.getUnidadMedida());
              
-                    PrecioMaterial precio =  null;//precioRFC.obtienePrecioMaterial(pedido.getClasePedido(),pedido.getOrganizacionVenta(),"20","02",pedido.getTipoMaterial(),pp.getId().getSku(),pp.getCantidad(),mat.getUnidadMedida(),pedido.getNroCliente(),pedido.getDestinatarioMercancia());
+                    PrecioMaterial precio =  precioRFC.obtienePrecioMaterial(pedido.getClasePedido(),
+                    														pedido.getOrganizacionVenta()
+                    														,"20","02",
+                    														pedido.getTipoMaterial(),
+                    														pp.getId().getSku(),
+                    														pp.getCantidad(),
+                    														mat.getUnidadMedida(),
+                    														pedido.getNroCliente(),
+                    														pedido.getDestinatarioMercancia());
               
                     if(precio!= null) {
                     pp.setMonto(precio.getMonto()!= null? precio.getMonto().toString() : pp.getMonto());
@@ -267,6 +289,7 @@ public class ConsultaCotizacion_backing extends AbstractBackingGen {
                 this.impuesto = impuesto.toString();
                 this.total= subtotal.add(impuesto).toString();
             }
+            }
         } catch(Exception e){
             logger.error("Error al desplegar listado de fletes " + e.getLocalizedMessage());
             this.getFacesContext().addMessage(null, new FacesMessage(
@@ -286,7 +309,7 @@ public class ConsultaCotizacion_backing extends AbstractBackingGen {
             }
             logger.info("Total para envio de email:" + total);
             ConstructEmail mail = this.getSpringContext().getBean("constructEmail", ConstructEmail.class);
-            mail.enviaCorreoCotizacion(null, this.getClienteInfo(), this.noCotizacion, this.partidas, total.toString() ,fechaEntrega);
+            mail.enviaCorreoCotizacion(this.email, this.getClienteInfo(), this.noCotizacion, this.partidas, total.toString() ,fechaEntrega);
         }else{
             logger.info("No se encontraros partidas para el nroPedido-"+nroPedido);
         }
@@ -296,24 +319,123 @@ public class ConsultaCotizacion_backing extends AbstractBackingGen {
     public String grabar(DetallePedidoCotizacion cotizacion) {
     	logger.info("grabar noCotizacion" +  noCotizacion);
     		if(cotizacion!= null && cotizacion.getNoPedido()!= null) {
-    		logger.info("grabar noCotizacion" + cotizacion.getDescripcion() + " " + cotizacion.getNoPedido() + " " + cotizacion.getMonto());
-    		PedidoPartidasPK pk = new PedidoPartidasPK();
-    		Long idPedido = Long.valueOf(cotizacion.getNoPedido());
-    		pk.setIdPedido(idPedido);
-            pk.setSku(CotizacionFlete.idMatFlete);
-            com.alliax.portalclientes.domain.PedidoPartidas pp = partidaService.findById(pk);
-            if(pp!= null) {
-            	logger.info("Se guardaran los cambios al pedido " + idPedido);
-            	pp.setMonto(cotizacion.getMonto());
-            	pp.setPrecioNeto(cotizacion.getMonto());
-            	pp.setFechaEntrega(cotizacion.getFechaEnt());
-            	partidaService.save(pp);
+                Pedido pedido=  service.findById(new Long(cotizacion.getNoPedido()));
+    		    logger.info("grabar noCotizacion" + cotizacion.getDescripcion() + " " + cotizacion.getNoPedido() + " " + cotizacion.getMonto());
+    		    PedidoPartidasPK pk = new PedidoPartidasPK();
+    		    Long idPedido = Long.valueOf(cotizacion.getNoPedido());
+    		    pk.setIdPedido(idPedido);
+                pk.setSku(CotizacionFlete.idMatFlete);
+                com.alliax.portalclientes.domain.PedidoPartidas pp = partidaService.findById(pk);
+                if(pp!= null) {
+            	    logger.info("Se guardaran los cambios al pedido " + idPedido);
+                	pp.setMonto(cotizacion.getMonto());
+            	    pp.setPrecioNeto(cotizacion.getMonto());
+            	    pp.setFechaEntrega(cotizacion.getFechaEnt());
+
+                	partidaService.save(pp);
+                    pedido.setEstatusCotizacion(this.estadoFin);
             	this.mostrarCotizacion = true;	
+            	enviarMailCotizacion(cotizacion.getNoPedido());
             }
     	}
     	return "";
     	
     }
+    
+    public String ordenarPedido(String noPedido) {
+    	  try{
+        	 CrearPedidoRFC crearPedidoRFC = crearPedidoRFC = this.getSpringContext().getBean("crearPedidoRFC",CrearPedidoRFC.class);
+             com.alliax.portalclientes.model.Pedido pedidoRFC = crearPedidoRFC(noPedido);
+             if(pedidoRFC!= null) {
+            	 crearPedidoRFC.crearPedido(pedidoRFC);
+             }
+    	  }catch (Exception e){
+        	 logger.error("Error al desplegar listado de fletes " + e.getLocalizedMessage());
+             this.getFacesContext().addMessage(null, new FacesMessage(
+                     FacesMessage.SEVERITY_ERROR,"Error",this.getLblMain().getString("errListaPedidos")));
+         }
+    	return "";
+    }
+
+    public com.alliax.portalclientes.model.Pedido crearPedidoRFC(String noPedido){
+    	com.alliax.portalclientes.model.Pedido pedidoRFC = null;
+    	if(noPedido!= null && noPedido.length()>0) {
+    		Pedido pedido = this.service.findById(new Long(noPedido));
+    		if(pedido!= null) {
+    			pedidoRFC = new com.alliax.portalclientes.model.Pedido();
+    			PedidoEncabezado encabezado = new com.alliax.portalclientes.model.PedidoEncabezado();
+    			List<com.alliax.portalclientes.model.PedidoPartidas> partidas = new ArrayList();
+    			List<PedidoReferenciaUbicacion> referencias = new ArrayList();
+    			List<PedidoProductoAlmacenar> prodAlmacenar = new ArrayList();
+    			List<PedidoCapacidadesTransporteEspecial> transporteEspecial = new ArrayList();
+    			List<PedidoEquipoEspecialProteccionPersonal>ProteccionPersonal = new ArrayList();
+        
+    			pedidoRFC.setNombreCliente(pedido.getNombreContacto() + " " + pedido.getApellidoContacto());
+    			pedidoRFC.setNroTeleofno(pedido.getTelefonoContacto());
+    			pedidoRFC.setNroTelefonoFijo(pedido.getTelefonoFijoContacto());
+    			pedidoRFC.setHorarioRecepcion(pedido.getHorarioRecepcion());
+        
+        
+    			encabezado.setNroCliente(pedido.getNroCliente());
+    			encabezado.setNroDestinatarioMercancias(pedido.getDestinatarioMercancia());
+    			encabezado.setClasePedido(pedido.getClasePedido());
+    			encabezado.setOrganizacionVenta(pedido.getOrganizacionVenta());
+    			encabezado.setCanalDistribucion("20");
+    			encabezado.setSector("02");
+    			encabezado.setMotivoPedido("");
+    			encabezado.setSegmento(pedido.getTipoMaterial());
+    			encabezado.setNroPedidoCliente(pedido.getNroPedido());
+    			encabezado.setSociedad(pedido.getSociedad());
+    			encabezado.setMetodoPago(pedido.getMetodoPago());
+    			encabezado.setUsoCFDI(pedido.getUsoCFDI());
+        
+       
+    			List<PedidoPartidas> partidasPedidos = partidaService.findByidPedido(pedido.getIdPedido());
+        
+    			for(PedidoPartidas pp : partidasPedidos){
+    				com.alliax.portalclientes.model.PedidoPartidas partidaRFC = new com.alliax.portalclientes.model.PedidoPartidas();
+    				partidaRFC.setPosicion(pp.getPosicion());
+    				partidaRFC.setNroMaterial(pp.getId().getSku());
+    				partidaRFC.setCantidad(pp.getCantidad());
+    				Material mat = materialService.findById(pp.getId().getSku());
+    				if(mat!= null){
+    					partidaRFC.setUnidadMedida(mat.getUnidadMedida());
+    				}
+    			}
+        
+        PedidoReferenciaUbicacion ref = new PedidoReferenciaUbicacion();
+        ref.setSecuencia(1);
+        ref.setLineaTexto(pedido.getReferenciaUbicacion());
+        referencias.add(ref);
+        
+       PedidoProductoAlmacenar pa = new PedidoProductoAlmacenar();
+       pa.setSecuencia(1);
+       pa.setLineaTexto(pedido.getProductoAlmacenar());
+       prodAlmacenar.add(pa);
+       
+       PedidoCapacidadesTransporteEspecial te = new PedidoCapacidadesTransporteEspecial();
+       te.setSecuencia(1);
+       te.setLineaTexto(pedido.getCapacidadesTransporte());
+       transporteEspecial.add(te);
+       
+       PedidoEquipoEspecialProteccionPersonal equipo = new PedidoEquipoEspecialProteccionPersonal();
+       equipo.setSecuencia(1);
+       equipo.setLineaTexto(pedido.getEquipoEspecial());
+       
+       ProteccionPersonal.add(equipo);
+        }
+    	}
+    	
+    return pedidoRFC;
+    }
+
+	public String getEmail() {
+		return email;
+	}
+
+	public void setEmail(String email) {
+		this.email = email;
+	}
     
      
     
